--- a/qltv.html
+++ b/qltv.html
@@ -10,6 +10,10 @@
 <body>
     <header>
         <img src="https://www.utc.edu.vn/assets/utc/images/logo.png" alt="">
+        <div class="userinfo">
+            <p>Welcome, User</p>
+            <a href="">Đăng xuất</a>
+        </div>
         <nav>
             <ul>
                 <li><a href="" >QUẢN LÝ SÁCH</a></li>
